<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gobble</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_suggest">Suggest</string>
    <string name="action_join">Join</string>
    <string name="action_chat">Chat</string>
    <string name="title_activity_create_profile">What foods do you like?</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_chat">Chat</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_fragment_title">Find buddies</string>
    <string name="upcoming_session_fragment_title">My buddies</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="label_list">List</string>
    <string name="label_map">Map</string>
    <string name="create_suggestion_title">Create suggestion</string>
    <string name="create_suggestion_label_venue_default">Pick a venue</string>
    <string name="create_suggestion_label_meeting_time_default">Pick a meeting time</string>
    <string name="create_suggestion_label_meeting_time">Meet at %s</string>
    <string name="create_suggestion_toast_venue_required">Please pick a venue.</string>
    <string name="create_suggestion_toast_meeting_time_required">Please pick a meeting time.</string>
    <string name="filter_suggestion_earliest_time">Earliest time</string>
    <string name="filter_suggestion_latest_time">Latest time</string>
    <string name="filter_suggestion_earliest_time_filled">After %s</string>
    <string name="filter_suggestion_latest_time_filled">Before %s</string>
    <string name="filter_suggestions">Filter suggestions</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_suggest">Suggest</string>
    <string name="label_okay">Okay</string>
    <string name="title_activity_venue_selection">Pick a venue</string>
    <string name="title_activity_suggestion">Suggestion</string>
    <string name="label_previous">Previous</string>
    <string name="label_next">Next</string>
    <string name="label_empty">No result is found.</string>
    <string name="label_loading">Loading&#8230;</string>
    <string name="title_activity_suggested_venue">Suggestion</string>
    <string name="label_choose_meeting_times">Please choose a meeting time</string>
    <string name="thumb_up">{fa-thumbs-o-up}</string>
    <string name="clock">{fa-clock-o}</string>
    <string name="im_going">I\'m Going |</string>
    <string name="fake_user">Jonny Appleseed</string>
    <string name="title_activity_how_it_works">How it works</string>
    <string name="how_it_works__label_create_or_join_title">Create or Join</string>
    <string name="how_it_works__label_create_or_join_desc">Either suggest a venue or join an existing suggestion.</string>
    <string name="how_it_works__label_chat_title">Communicate</string>
    <string name="how_it_works__label_chat_desc">Iron out the details in the group chat.</string>
    <string name="how_it_works__label_be_social_title">Be Social</string>
    <string name="how_it_works__label_be_social_desc">Enjoy your meal with friends coworkers or new acquaintances.</string>
    <string name="how_it_works__label_skip">Skip</string>
    <string name="how_it_works__label_next">Next</string>
    <string name="how_it_works__label_get_started">Get Started</string>

</resources>
