<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sociallunch.android.activities.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_suggest"
        android:title="@string/action_suggest"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />
</menu>
